# SAKUSOU

./: .gitignore  README.md  pyproject.toml  pytest.ini
saku/api/client/: _client.py  _io.py  _utility.py
saku/api/factory/: _string.py
sakusou/api/client/: __init__.py  _entity.py  _io.py
sakusou/api/examine/: _examine.py
sakusou/api/factory/: __init__.py  _file.py
tests/: conftest.py
tests/app/: test_app.py
