[tool.poetry]
name = "sakusou"
version = "0.1.0"
description = ""
authors = ["aYukiYoshida <yuki.yoshida@access-company.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
PyYAML = "^6.0"
numpy = "^1.22.4"
opencv-python = "^4.6.0"
curlify = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"
black = "^22.3.0"
flake8 = "^4.0.1"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
